// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<div>
  <header
    className="tc-communities__header__container src-shared-components-tc-communities-Header-___Header__container___YEWV6"
  >
    <div
      className="tc-communities__header__header src-shared-components-tc-communities-Header-___Header__header___1vQf1"
    >
      <div
        className="tc-communities__header__logos src-shared-components-tc-communities-Header-___Header__logos___1u4yY"
      >
        
      </div>
      <button
        className="tc-communities__header__mobile-toggle src-shared-components-tc-communities-Header-___Header__mobile-toggle___JaNvG"
        onClick={[Function]}
      >
        <span>
          Toggle navigation
        </span>
        <i />
        <i />
        <i />
      </button>
    </div>
    <div
      className="tc-communities__header__menu-wrap src-shared-components-tc-communities-Header-___Header__menu-wrap___4JXX4"
    >
      <ul
        className="tc-communities__header__menu src-shared-components-tc-communities-Header-___Header__menu___2U-Hb"
      >
        
      </ul>
    </div>
  </header>
</div>
`;

exports[`Snapshot match 2`] = `
<div>
  <link
    href="some/css/url"
    rel="stylesheet"
    type="text/css"
  />
  <header
    className="tc-communities__header__container src-shared-components-tc-communities-Header-___Header__container___YEWV6"
  >
    <div
      className="tc-communities__header__header src-shared-components-tc-communities-Header-___Header__header___1vQf1"
    >
      <div
        className="tc-communities__header__logos src-shared-components-tc-communities-Header-___Header__logos___1u4yY"
      >
        <Link
          className="tc-communities__header__logo src-shared-components-tc-communities-Header-___Header__logo___IYxzO"
          replace={false}
          to="/community/someId/pageId1"
        >
          <img
            alt="Community logo"
            src="some/logo/url"
          />
        </Link>
      </div>
      <button
        className="tc-communities__header__mobile-toggle src-shared-components-tc-communities-Header-___Header__mobile-toggle___JaNvG"
        onClick={[Function]}
      >
        <span>
          Toggle navigation
        </span>
        <i />
        <i />
        <i />
      </button>
    </div>
    <div
      className="tc-communities__header__menu-wrap tc-communities__header__open src-shared-components-tc-communities-Header-___Header__menu-wrap___4JXX4 src-shared-components-tc-communities-Header-___Header__open___3Qq9v"
    >
      <ul
        className="tc-communities__header__menu src-shared-components-tc-communities-Header-___Header__menu___2U-Hb"
      >
        <li
          className="tc-communities__header__menu-item src-shared-components-tc-communities-Header-___Header__menu-item___3LG8-"
        >
          <NavLink
            activeClassName="menu-link_active tc-communities__header__menu-link_active"
            className="tc-communities__header__menu-link src-shared-components-tc-communities-Header-___Header__menu-link___Dm7_k"
            to="/community/someId/pageId1"
          >
            Menu Item 1
          </NavLink>
        </li>
        <li
          className="tc-communities__header__menu-item src-shared-components-tc-communities-Header-___Header__menu-item___3LG8-"
        >
          <NavLink
            activeClassName="menu-link_active tc-communities__header__menu-link_active"
            className="tc-communities__header__menu-link src-shared-components-tc-communities-Header-___Header__menu-link___Dm7_k"
            to="/community/someId/pageId2"
          >
            Menu Item 2
          </NavLink>
        </li>
        <li
          className="tc-communities__header__menu-item src-shared-components-tc-communities-Header-___Header__menu-item___3LG8-"
        >
          <NavLink
            activeClassName="menu-link_active tc-communities__header__menu-link_active"
            className="tc-communities__header__menu-link src-shared-components-tc-communities-Header-___Header__menu-link___Dm7_k"
            to="/community/someId/pageId3"
          >
            Menu Item 3
          </NavLink>
        </li>
      </ul>
    </div>
  </header>
</div>
`;
